change promo page

--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
             <div class="service-item item-teal position-relative">
               <i class="bi bi-easel icon"></i>
               <div>
-                <h3>Kelas Presentasi Anak 🏆</h3>
+                <h3>Kelas Presentasi Anak 🧒</h3>
                 <p>Pendiem, pasif, kebanyakan main game, susah interaksi hingga Moms diingatkan guru jika putra-putri
                   moms kurang bersosialisasi. Mumpung masih dini, benahi sekarang!</p>
                 <a href="https://api.whatsapp.com/send?phone=6285162992597&text=Haloo%20kak%20boleh%20di%20infokan%20untuk%20kelas%20public%20speaking%20anak%3F%0A%0A%0A%60%60%60dari%20ig%2Ftiktok%2Fx%2Ffb%60%60%60"
@@ -611,7 +611,7 @@
               <li class="clearfix mb-4">
                 <div class="member-details-triangle">
                   <div>
-                    <img src="assets/img/mentor/fanny.jpg" alt="Kelas Public Speaking Jogja" class="img-fluid" />
+                    <img src="assets/img/mentor/fanny.jpg" alt="Kelas Public Speaking Jogja" class="img-fluid" loading="lazy" />
                     <div class="member-info-triangle">
                       <h3>Fanny Carolina</h3>
                       <p>Jogja</p>
@@ -621,7 +621,7 @@
 
                 <div class="member-details-triangle">
                   <div>
-                    <img src="assets/img/mentor/rio.jpg" alt="Kelas Public Speaking Jogja" class="img-fluid" />
+                    <img src="assets/img/mentor/rio.jpg" alt="Kelas Public Speaking Jogja" class="img-fluid" loading="lazy" />
                     <div class="member-info-triangle">
                       <h3>Rio Fariza</h3>
                       <p>Solo</p>
@@ -631,7 +631,7 @@
 
                 <div class="member-details-triangle">
                   <div>
-                    <img src="assets/img/mentor/sofari.jpg" alt="Kelas Public Speaking Jogja" class="img-fluid" />
+                    <img src="assets/img/mentor/sofari.jpg" alt="Kelas Public Speaking Jogja" class="img-fluid" loading="lazy" />
                     <div class="member-info-triangle">
                       <h3>Ahmad Sofari</h3>
                       <p>Jogja</p>
@@ -645,7 +645,7 @@
               <li class="clearfix mb-4">
                 <div class="member-details-triangle">
                   <div>
-                    <img src="assets/img/mentor/adit.jpg" alt="Kelas Public Speaking Jogja" class="img-fluid" />
+                    <img src="assets/img/mentor/adit.jpg" alt="Kelas Public Speaking Jogja" class="img-fluid" loading="lazy" />
                     <div class="member-info-triangle">
                       <h3>Aditya Dyah</h3>
                       <p>Banjarbaru</p>
@@ -655,7 +655,7 @@
 
                 <div class="member-details-triangle">
                   <div>
-                    <img src="assets/img/mentor/pitta.jpg" alt="Kelas Public Speaking Jogja" class="img-fluid" />
+                    <img src="assets/img/mentor/pitta.jpg" alt="Kelas Public Speaking Jogja" class="img-fluid" loading="lazy" />
                     <div class="member-info-triangle">
                       <h3>Pitta Sekar</h3>
                       <p>Tangsel</p>
@@ -665,7 +665,7 @@
 
                 <div class="member-details-triangle">
                   <div>
-                    <img src="assets/img/mentor/fajar.jpg" alt="Kelas Public Speaking Jogja" class="img-fluid" />
+                    <img src="assets/img/mentor/fajar.jpg" alt="Kelas Public Speaking Jogja" class="img-fluid" loading="lazy" />
                     <div class="member-info-triangle">
                       <h3>Muhammad Fajar</h3>
                       <p>Jogja</p>
@@ -679,7 +679,7 @@
               <li class="clearfix mb-4">
                 <div class="member-details-triangle">
                   <div>
-                    <img src="assets/img/mentor/tiya.jpg" alt="Kelas Public Speaking Jogja" class="img-fluid" />
+                    <img src="assets/img/mentor/tiya.jpg" alt="Kelas Public Speaking Jogja" class="img-fluid" loading="lazy" />
                     <div class="member-info-triangle">
                       <h3>Husnul Fatiya</h3>
                       <p>Jambi</p>
@@ -689,7 +689,7 @@
 
                 <div class="member-details-triangle">
                   <div>
-                    <img src="assets/img/mentor/audie.jpg" alt="Kelas Public Speaking Jogja" class="img-fluid" />
+                    <img src="assets/img/mentor/audie.jpg" alt="Kelas Public Speaking Jogja" class="img-fluid" loading="lazy" />
                     <div class="member-info-triangle">
                       <h3>Audie Ihza</h3>
                       <p>Jogja</p>
@@ -699,7 +699,7 @@
 
                 <div class="member-details-triangle">
                   <div>
-                    <img src="assets/img/mentor/panji.jpg" alt="Kelas Public Speaking Jogja" class="img-fluid" />
+                    <img src="assets/img/mentor/panji.jpg" alt="Kelas Public Speaking Jogja" class="img-fluid" loading="lazy" />
                     <div class="member-info-triangle">
                       <h3>Panji Putra</h3>
                       <p>Karang Anyar</p>
