--- a/index.html
+++ b/index.html
@@ -488,9 +488,9 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjVrDQauZrtIRyOJdjDp29vpQqjdJwbUsTM2vBzzyyB4gTJl8i3n=w120-h120-p-rp-mo-ba5-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjUQ-Vq8rm5wwY5efzwiKmKbxyy-q6hh36u-mmH9mjtez315cJ7H=w45-h45-p-rp-mo-br100"
                         class="testimonial-img" alt="testimoni-1" />
-                      <h3>Lulu Luthfiya</h3>
+                      <h3>Astrid Savitri</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -500,9 +500,8 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Ikut yg kelas basic, walopun online tp ternyata kelasnya berjalan lancar. Mentornya baik dan
-                        jadi dapet temen disini. Awalnya malu bgt kalau harus bicara depan org banyak, skrg mulai
-                        percaya diri termasuk ketika menyampaikan pendapat depan umum. Thanks.
+                        Learning public speaking at Dialogika is very enjoyable, both in the learning atmosphere and the
+                        mentors. Here, you not only gain knowledge but also the confidence to speak well in public.
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
@@ -513,9 +512,7 @@
                 <div class="swiper-slide">
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
-                      <img
-                        src="assets/img/intern/septi.jpg"
-                        class="testimonial-img" alt="testimoni-2" />
+                      <img src="assets/img/intern/septi.jpg" class="testimonial-img" alt="testimoni-2" />
                       <h3>Septi Allya Rizki</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
@@ -611,7 +608,8 @@
               <li class="clearfix mb-4">
                 <div class="member-details-triangle">
                   <div>
-                    <img src="assets/img/mentor/fanny.jpg" alt="Kelas Public Speaking Jogja" class="img-fluid" loading="lazy" />
+                    <img src="assets/img/mentor/fanny.jpg" alt="Kelas Public Speaking Jogja" class="img-fluid"
+                      loading="lazy" />
                     <div class="member-info-triangle">
                       <h3>Fanny Carolina</h3>
                       <p>Jogja</p>
@@ -621,7 +619,8 @@
 
                 <div class="member-details-triangle">
                   <div>
-                    <img src="assets/img/mentor/rio.jpg" alt="Kelas Public Speaking Jogja" class="img-fluid" loading="lazy" />
+                    <img src="assets/img/mentor/rio.jpg" alt="Kelas Public Speaking Jogja" class="img-fluid"
+                      loading="lazy" />
                     <div class="member-info-triangle">
                       <h3>Rio Fariza</h3>
                       <p>Solo</p>
@@ -631,7 +630,8 @@
 
                 <div class="member-details-triangle">
                   <div>
-                    <img src="assets/img/mentor/sofari.jpg" alt="Kelas Public Speaking Jogja" class="img-fluid" loading="lazy" />
+                    <img src="assets/img/mentor/sofari.jpg" alt="Kelas Public Speaking Jogja" class="img-fluid"
+                      loading="lazy" />
                     <div class="member-info-triangle">
                       <h3>Ahmad Sofari</h3>
                       <p>Jogja</p>
@@ -645,7 +645,8 @@
               <li class="clearfix mb-4">
                 <div class="member-details-triangle">
                   <div>
-                    <img src="assets/img/mentor/adit.jpg" alt="Kelas Public Speaking Jogja" class="img-fluid" loading="lazy" />
+                    <img src="assets/img/mentor/adit.jpg" alt="Kelas Public Speaking Jogja" class="img-fluid"
+                      loading="lazy" />
                     <div class="member-info-triangle">
                       <h3>Aditya Dyah</h3>
                       <p>Banjarbaru</p>
@@ -655,7 +656,8 @@
 
                 <div class="member-details-triangle">
                   <div>
-                    <img src="assets/img/mentor/pitta.jpg" alt="Kelas Public Speaking Jogja" class="img-fluid" loading="lazy" />
+                    <img src="assets/img/mentor/pitta.jpg" alt="Kelas Public Speaking Jogja" class="img-fluid"
+                      loading="lazy" />
                     <div class="member-info-triangle">
                       <h3>Pitta Sekar</h3>
                       <p>Tangsel</p>
@@ -665,7 +667,8 @@
 
                 <div class="member-details-triangle">
                   <div>
-                    <img src="assets/img/mentor/fajar.jpg" alt="Kelas Public Speaking Jogja" class="img-fluid" loading="lazy" />
+                    <img src="assets/img/mentor/fajar.jpg" alt="Kelas Public Speaking Jogja" class="img-fluid"
+                      loading="lazy" />
                     <div class="member-info-triangle">
                       <h3>Muhammad Fajar</h3>
                       <p>Jogja</p>
@@ -679,7 +682,8 @@
               <li class="clearfix mb-4">
                 <div class="member-details-triangle">
                   <div>
-                    <img src="assets/img/mentor/tiya.jpg" alt="Kelas Public Speaking Jogja" class="img-fluid" loading="lazy" />
+                    <img src="assets/img/mentor/tiya.jpg" alt="Kelas Public Speaking Jogja" class="img-fluid"
+                      loading="lazy" />
                     <div class="member-info-triangle">
                       <h3>Husnul Fatiya</h3>
                       <p>Jambi</p>
@@ -689,7 +693,8 @@
 
                 <div class="member-details-triangle">
                   <div>
-                    <img src="assets/img/mentor/audie.jpg" alt="Kelas Public Speaking Jogja" class="img-fluid" loading="lazy" />
+                    <img src="assets/img/mentor/audie.jpg" alt="Kelas Public Speaking Jogja" class="img-fluid"
+                      loading="lazy" />
                     <div class="member-info-triangle">
                       <h3>Audie Ihza</h3>
                       <p>Jogja</p>
@@ -699,7 +704,8 @@
 
                 <div class="member-details-triangle">
                   <div>
-                    <img src="assets/img/mentor/panji.jpg" alt="Kelas Public Speaking Jogja" class="img-fluid" loading="lazy" />
+                    <img src="assets/img/mentor/panji.jpg" alt="Kelas Public Speaking Jogja" class="img-fluid"
+                      loading="lazy" />
                     <div class="member-info-triangle">
                       <h3>Panji Putra</h3>
                       <p>Karang Anyar</p>
