--- a/index.html
+++ b/index.html
@@ -884,11 +884,11 @@
                     <div class="testimonial-wrap">
                       <div class="testimonial-item">
                         <img
-                          src="https://lh3.googleusercontent.com/a-/ALV-UjVrDQauZrtIRyOJdjDp29vpQqjdJwbUsTM2vBzzyyB4gTJl8i3n=w120-h120-p-rp-mo-ba5-br100"
+                          src="https://lh3.googleusercontent.com/a-/ALV-UjUQ-Vq8rm5wwY5efzwiKmKbxyy-q6hh36u-mmH9mjtez315cJ7H=w45-h45-p-rp-mo-br100"
                           class="testimonial-img"
                           alt="testimoni-1"
                         />
-                        <h3>Lulu Luthfiya</h3>
+                        <h3>Astrid Savitri</h3>
                         <h4>
                           <i class="bi bi-star-fill"></i>
                           <i class="bi bi-star-fill"></i>
@@ -898,12 +898,7 @@
                         </h4>
                         <p>
                           <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                          Ikut yg kelas basic, walopun online tp ternyata
-                          kelasnya berjalan lancar. Mentornya baik dan jadi
-                          dapet temen disini. Awalnya malu bgt kalau harus
-                          bicara depan org banyak, skrg mulai percaya diri
-                          termasuk ketika menyampaikan pendapat depan umum.
-                          Thanks.
+                          Learning public speaking at Dialogika is very enjoyable, both in the learning atmosphere and the mentors. Here, you not only gain knowledge but also the confidence to speak well in public.
                           <i
                             class="bx bxs-quote-alt-right quote-icon-right"
                           ></i>
