--- a/index.html
+++ b/index.html
@@ -376,10 +376,10 @@
       <div class="container">
         <div class="row g-5">
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <div class="service-item item-cyan position-relative">
-              <i class="bi bi-laptop icon"></i>
+            <div class="service-item item-cyan position-relative bg">
+              <i class="bi bi-laptop-fill icon"></i>
               <div>
-                <h3>Penawaran Eksklusif Kelas Online! 🎫</h3>
+                <h3>Penawaran Eksklusif Kelas Online! 🏷️</h3>
                 <p>
                   Nikmati kelas bersama mentor professional dengan peserta
                   terbatas selama sebulan! Dengan garansi pasti bisa!
@@ -395,7 +395,7 @@
             <div class="service-item item-orange position-relative">
               <i class="bi bi-people-fill icon"></i>
               <div>
-                <h3>Kelas Offline Tersisa Sedikit! 📝</h3>
+                <h3>Kelas Offline Tersisa Sedikit! 🗒</h3>
                 <p>
                   Dibimbing secara langsung dari ahlinya, fokus latihan dan
                   setiap kali latihan selalu ada evaluasi hingga mahir
@@ -411,7 +411,7 @@
             <div class="service-item item-teal position-relative">
               <i class="bi bi-easel icon"></i>
               <div>
-                <h3>Kelas Presentasi Anak 🧑‍🚀</h3>
+                <h3>Kelas Presentasi Anak 🙋</h3>
                 <p>
                   Pendiem, pasif, kebanyakan main game, susah interaksi hingga
                   Moms diingatkan guru jika putra-putri moms kurang
@@ -429,7 +429,7 @@
             <div class="service-item item-red position-relative">
               <i class="bi bi-person-badge icon"></i>
               <div>
-                <h3>Internship Program 🪧</h3>
+                <h3>Internship Program 🤝</h3>
                 <p>
                   Gabut, sulit cari kerja, fomo teman-teman lo pada magang.
                   Udah deh, latih dirimu untuk lebih produktif dan memiliki
@@ -446,7 +446,7 @@
             <div class="service-item item-indigo position-relative">
               <i class="bi bi-calendar4-week icon"></i>
               <div>
-                <h3>Jadwalkan Bertemu Admin 📆</h3>
+                <h3>Jadwalkan Bertemu Admin 👩‍💻</h3>
                 <p>
                   Masih ragu dengan kebutuhanmu? atau ingin konsultasi lebih
                   mendalam bersama Admin Dialogika. Yuk janjian dulu
@@ -463,7 +463,7 @@
             <div class="service-item item-pink position-relative">
               <i class="bi bi-building-check icon"></i>
               <div>
-                <h3>Kelas Khusus Kantor 🏢</h3>
+                <h3>Kelas Khusus Kantor 🏛︎</h3>
                 <p>
                   Karyawan pendiem, nggak aktif, gak punya inisiatif, hingga
                   gak bisa diajak diskusi. Saran kami dibandingkan benahi
