mengganti header agar sama dengan header utama dialogika

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
         <section class="section hero"></section>
       </div>
       <div class="image-container">
-        <img src="assets/img/window4.webp" alt="image" />
+        <img src="assets/img/window5.webp" alt="image" />
       </div>
     </div>
     <!-- Scrolling Zoom -->
@@ -365,7 +365,7 @@
     <section id="services" class="quickstart-services section light-background">
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Penawaran Eksklusif Hari Ini! 🙌🎉🎁</h2>
+        <h2>Penawaran Eksklusif Hari Ini! 🔔</h2>
         <p>
           Segera manfaatkan penawaran spesial kelas dan event menarik dari
           Dialogika!
