--- a/index.html
+++ b/index.html
@@ -302,6 +302,9 @@
             <div class="swiper-slide">
               <img src="assets/img/corporate/amikom.png" class="img-fluid" alt="Universitas Amikom Yogyakarta" />
             </div>
+            <div class="swiper-slide swiper-images">
+              <img src="assets/img/corporate/PertaminaDrilling.png" class="rounded" alt="Pertamina Drillinglogo" />
+            </div>
             <div class="swiper-slide">
               <img src="assets/img/corporate/mercu.png" class="img-fluid" alt="Mercu Buana University" />
             </div>
