update partner section

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
   <link href="assets/part/modals/modal.css" rel="stylesheet" />
   <link href="assets/part/quickstart-service/style.css" rel="stylesheet" />
   <link href="assets/part/read-more/read-more_less.css" rel="stylesheet" />
+  <link href="assets/part/smooth-slider/smooth-slider.css" rel="stylesheet" />
 
   <link href="assets/part/scrolling-zoom/zooming.css" rel="stylesheet" />
   <link href="assets/part/scrolling-zoom/style.css" rel="stylesheet" />
@@ -291,67 +292,107 @@
     </div>
     <!-- Scrolling Zoom -->
 
-    <!-- ======= Clients Section ======= -->
-    <section id="clients" class="clients" style="margin-top: 0px; margin-bottom: -10px">
-      <div class="container" data-aos="fade-up">
-        <div class="clients-slider swiper">
-          <div class="swiper-wrapper align-items-center">
-            <div class="swiper-slide">
-              <img src="assets/img/corporate/uad.png" class="img-fluid" alt="Universitas Ahmad Dahlan" />
+     <!-- ======= Clients Section ======= -->
+     <section class="section" id='partner' style="background: #F1F7FD;">
+      <!-- Start of Clients Section -->
+      <div class="container overflow-hidden" id="partners">
+        <div class="d-flex flex-lg-row flex-column align-items-center">
+          <div class="flex-grow-1 m-auto col-lg-4 col-md-12">
+
+            <div class="section-title">
+              <h3>
+                Our Partner
+              </h3>
             </div>
-            <div class="swiper-slide">
-              <img src="assets/img/corporate/amikom.png" class="img-fluid" alt="Universitas Amikom Yogyakarta" />
-            </div>
-            <div class="swiper-slide swiper-images">
-              <img src="assets/img/corporate/PertaminaDrilling.png" class="rounded" alt="Pertamina Drillinglogo" />
-            </div>
-            <div class="swiper-slide">
-              <img src="assets/img/corporate/mercu.png" class="img-fluid" alt="Mercu Buana University" />
-            </div>
-            <div class="swiper-slide">
-              <img src="assets/img/corporate/polita.png" class="img-fluid" alt="politeknik Aisyiyah Pontianak" />
-            </div>
-            <div class="swiper-slide">
-              <img src="assets/img/corporate/aveon.png" class="img-fluid" alt="Aveon Hotel" />
-            </div>
-            <div class="swiper-slide">
-              <img src="assets/img/corporate/avo.webp" class="img-fluid" alt="AVO Innovation & Technology" />
-            </div>
-            <div class="swiper-slide">
-              <img src="assets/img/corporate/gides.webp" class="img-fluid" alt="GIDES Go Digital Desa" />
-            </div>
-            <div class="swiper-slide">
-              <img src="assets/img/corporate/kdi.webp" class="img-fluid" alt="Kontes Dangdung Indonesia" />
-            </div>
-            <div class="swiper-slide">
-              <img src="assets/img/corporate/KusumaDentalCare.png" class="img-fluid" alt="Kusuma Dental Care" />
-            </div>
-            <div class="swiper-slide">
-              <img src="assets/img/corporate/mnc.webp" class="img-fluid" alt="MNCTV" />
-            </div>
-            <div class="swiper-slide">
-              <img src="assets/img/corporate/ruhui-rahayu.png" class="img-fluid" alt="Ruhui Rahayu" />
-            </div>
-            <div class="swiper-slide">
-              <img src="assets/img/corporate/smk-dr-sutomo-temanggung.png" class="img-fluid"
-                alt="SMK DR Sutomo Temanggung" />
-            </div>
-            <div class="swiper-slide">
-              <img src="assets/img/corporate/ugm.png" class="img-fluid" alt="Universitas Gadjah Mada" />
-            </div>
-            <div class="swiper-slide">
-              <img src="assets/img/corporate/ui.png" class="img-fluid" alt="Universitas Indonesia" />
-            </div>
-            <div class="swiper-slide">
-              <img src="assets/img/corporate/uii.png" class="img-fluid" alt="Universtas Islam Indonesia" />
-            </div>
-            <div class="swiper-slide">
-              <img src="assets/img/corporate/uin-suka.png" class="img-fluid" alt="UIN Sunan Kalijaga" />
-            </div>
+            <p class="w-100 text-left fs-6">Dialogika bermitra dengan universitas dan korporasi terkemuka
+              yang berfokus pada pengembangan keterampilan komunikasi.</p>
           </div>
-          <div class="swiper-pagination"></div>
+
+          <div class="flex-grow-1 smooth-swiper-container m-auto col-lg-6 col-md-12">
+
+            <div class="w-100 position-relative overflow-hidden py-3 smooth-swiper-container-top">
+              <div class="swiper-wrapper align-items-center">
+                <div class="swiper-slide swiper-images">
+                  <img src="assets/img/corporate/uad.png" class="rounded" alt="universitas Ahmad Dahlan logo" />
+                </div>
+                <div class="swiper-slide swiper-images">
+                  <img src="assets/img/corporate/amikom.png" class="rounded" alt="Universitas Amikom Yogyakarta logo" />
+                </div>
+                <div class="swiper-slide swiper-images">
+                  <img src="assets/img/corporate/PertaminaDrilling.png" class="rounded" alt="Pertamina Drilling logo" />
+                </div>
+                <div class="swiper-slide swiper-images">
+                  <img src="assets/img/corporate/gides.webp" class="rounded" alt="Gides Go Digital Desa logo" />
+                </div>
+                <div class="swiper-slide swiper-images">
+                  <img src="assets/img/corporate/KusumaDentalCare.png" class="rounded" alt="Kusuma Dental Care logo" />
+                </div>
+                <div class="swiper-slide swiper-images">
+                  <img src="assets/img/corporate/mercu.png" class="rounded" alt="Universitas Mercu Buana logo" />
+                </div>
+                <div class="swiper-slide swiper-images">
+                  <img src="assets/img/corporate/KOSABANGSA.webp" class="rounded" alt="Kosabangsa logo" />
+                </div>
+              </div>
+            </div>
+            <div class="w-100 position-relative overflow-hidden py-3 smooth-swiper-container-middle">
+              <div class="swiper-wrapper align-items-center">
+                <div class="swiper-slide swiper-images">
+                  <img src="assets/img/corporate/avo.webp" class="rounded" alt="AVO Innovation & Technology logo" />
+                </div>
+                <div class="swiper-slide swiper-images">
+                  <img src="assets/img/corporate/polita.png" class="rounded" alt="Politeknik Aisyiyah Pontianak logo" />
+                </div>
+                <div class="swiper-slide swiper-images">
+                  <img src="assets/img/corporate/ruhui-rahayu.png" class="rounded"
+                    alt="Kabupaten Tapin Kalimantan Timur logo" />
+                </div>
+                <div class="swiper-slide swiper-images">
+                  <img src="assets/img/corporate/aveon.png" class="rounded" alt="Aveon Hotel logo" />
+                </div>
+                <div class="swiper-slide swiper-images">
+                  <img src="assets/img/corporate/UNM.webp" class="rounded" alt="Universitas Negeri Makassar" />
+                </div>
+                <div class="swiper-slide swiper-images">
+                  <img src="assets/img/corporate/desa-matano.webp" class="rounded" alt="Desa Matano logo" />
+                </div>
+                <div class="swiper-slide swiper-images">
+                  <img src="assets/img/corporate/smk-dr-sutomo-temanggung.png" class="rounded"
+                    alt="SMK Dr Sutomo Temanggung logo" />
+                </div>
+              </div>
+
+              <div class="w-100 position-relative overflow-hidden py-3 smooth-swiper-container-bottom">
+                <div class="swiper-wrapper align-items-center">
+                  <div class="swiper-slide swiper-images">
+                    <img src="assets/img/corporate/uin-suka.png" class="rounded" alt="UIN Suka logo" />
+                  </div>
+                  <div class="swiper-slide swiper-images">
+                    <img src="assets/img/corporate/uii.png" class="rounded" alt="Universitas Islam Indonesia logo" />
+                  </div>
+                  <div class="swiper-slide swiper-images">
+                    <img src="assets/img/corporate/mnc.webp" class="rounded" alt="MNCTV logo" />
+                  </div>
+                  <div class="swiper-slide swiper-images">
+                    <img src="assets/img/corporate/kdi.webp" class="rounded" alt="Kontes Dangdut Indonesia logo" />
+                  </div>
+                  <div class="swiper-slide swiper-images">
+                    <img src="assets/img/corporate/ugm.png" class="rounded" alt="Universitas Gadjah Mada logo" />
+                  </div>
+                  <div class="swiper-slide swiper-images">
+                    <img src="assets/img/corporate/ui.png" class="rounded" alt="Universitas Indonesia logo" />
+                  </div>
+                  <div class="swiper-slide swiper-images">
+                    <img src="assets/img/corporate/smartano.webp" class="rounded" alt="Smartano logo" />
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+
         </div>
-      </div>
+        <!-- End Clients Section -->
     </section>
     <!-- End Clients Section -->
 
@@ -1500,6 +1541,12 @@
 
   <script src="assets/part/gallery-ipsum/script.js"></script>
   <script src="./assets/js/sosmed.js"></script>
+
+  
+  <!-- Part JS Files -->
+  <script src="assets/part/modals/modal-component.js"></script>
+  <script src="assets/part/smooth-slider/smooth-slider.js"></script>
+
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
