--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
             <div class="service-item item-orange position-relative">
               <i class="bi bi-people-fill icon"></i>
               <div>
-                <h3>Kelas Offline Tersisa Sedikit! 🗒</h3>
+                <h3>Kelas Offline Tersisa Sedikit! 📍</h3>
                 <p>
                   Dibimbing secara langsung dari ahlinya, fokus latihan dan
                   setiap kali latihan selalu ada evaluasi hingga mahir
@@ -490,7 +490,7 @@
             <div class="service-item item-indigo position-relative">
               <i class="bi bi-calendar4-week icon"></i>
               <div>
-                <h3>Jadwalkan Bertemu Admin 👩‍💻</h3>
+                <h3>Jadwalkan Bertemu Admin 🤵‍♀️</h3>
                 <p>
                   Masih ragu dengan kebutuhanmu? atau ingin konsultasi lebih
                   mendalam bersama Admin Dialogika. Yuk janjian dulu
@@ -551,9 +551,9 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjUQ-Vq8rm5wwY5efzwiKmKbxyy-q6hh36u-mmH9mjtez315cJ7H=w45-h45-p-rp-mo-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjVHmCA--Qkduq1G8UPNHN2YpV3hsLLmLoPmUfAhgFQWPVwb5xc=w36-h36-p-rp-mo-br100"
                         class="testimonial-img" alt="testimoni-1" />
-                      <h3>Astrid Savitri</h3>
+                      <h3>Muhamad Sugandhi</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -563,8 +563,12 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Learning public speaking at Dialogika is very enjoyable, both in the learning atmosphere and the
-                        mentors. Here, you not only gain knowledge but also the confidence to speak well in public.
+                        pengalaman yang sangat manarik, dimana kita bisa berlatih berbicara dengan sangat santai dan dapat dipraktekkan langsung materinya,
+                        <span class="dots">...</span><span class="readMore"> Read
+                          More
+                          &raquo;</span>
+                        <span class="moreText"> dan terimakasih untuk mentoring yang menyenangkan bersama kak, Panji Arya</span><span
+                          class="readLess"> &laquo; Read Less</span>
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
