ganti gambar, testi, dan icon

--- a/index.html
+++ b/index.html
@@ -292,8 +292,8 @@
     </div>
     <!-- Scrolling Zoom -->
 
-     <!-- ======= Clients Section ======= -->
-     <section class="section" id='partner' style="background: #F1F7FD;">
+    <!-- ======= Clients Section ======= -->
+    <section class="section" id='partner' style="background: #F1F7FD;">
       <!-- Start of Clients Section -->
       <div class="container overflow-hidden" id="partners">
         <div class="d-flex flex-lg-row flex-column align-items-center">
@@ -473,7 +473,7 @@
             <div class="service-item item-red position-relative">
               <i class="bi bi-person-badge icon"></i>
               <div>
-                <h3>Internship Program 🤝</h3>
+                <h3>Internship Program 👩‍🏭</h3>
                 <p>
                   Gabut, sulit cari kerja, fomo teman-teman lo pada magang.
                   Udah deh, latih dirimu untuk lebih produktif dan memiliki
@@ -668,9 +668,9 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjUHNtNu-jxhiNGRZM0LDaeY6Hb--oT_uwqByXK1Vq5OVLNuM8s=w99-h99-p-rp-mo-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjUAuYu_wBIVAz8aVNjd6tVU564uyfBVA6RqTYav7fo1YsN8IvTdNg=w75-h75-p-rp-mo-ba3-br100"
                         class="testimonial-img" alt="testimoni-1" />
-                      <h3>Hari Purnomo Aji</h3>
+                      <h3>Fatah Hidayat</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -680,15 +680,11 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Saya mengambil kelas private basic dg Dialogika,
-                        benar-benar sangat membantu. Mentor juga menjelaskan
-                        dengan baik, detail dan sangat terbuka. Pengalaman
-                        yang luar biasa, saya akan merekomendasikan
+                        The class is exciting, fun, guided by a reliable, friendly and patient instructor. After taking
+                        this class, you will increase your confidence in appearing to speak in public with a calm and
+                        systematic delivery.
                         <span class="dots">...</span><span class="readMore"> Read More &raquo;</span>
-                        <span class="moreText">
-                          Dialogika kepada teman-teman saya sebagai salah satu
-                          vendor untuk menambah skill Public Speaking. Terima
-                          kasih.</span><span class="readLess"> &laquo; Read Less</span><i
+                        <span class="moreText"></span><span class="readLess"> &laquo; Read Less</span><i
                           class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
@@ -1542,7 +1538,7 @@
   <script src="assets/part/gallery-ipsum/script.js"></script>
   <script src="./assets/js/sosmed.js"></script>
 
-  
+
   <!-- Part JS Files -->
   <script src="assets/part/modals/modal-component.js"></script>
   <script src="assets/part/smooth-slider/smooth-slider.js"></script>
