update testi dan gambar

--- a/index.html
+++ b/index.html
@@ -547,13 +547,14 @@
           <div class="col-lg-9">
             <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
               <div class="swiper-wrapper">
+
                 <div class="swiper-slide">
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjVHmCA--Qkduq1G8UPNHN2YpV3hsLLmLoPmUfAhgFQWPVwb5xc=w36-h36-p-rp-mo-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjVlcd-NFYqxqMlrPNyCGJfhkwtyKv80PrKhQygOFcw5dDqsu-tFHQ=w75-h75-p-rp-mo-ba4-br100"
                         class="testimonial-img" alt="testimoni-1" />
-                      <h3>Muhamad Sugandhi</h3>
+                      <h3>Miftahul Jannah SPd</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -562,13 +563,26 @@
                         <i class="bi bi-star-fill"></i>
                       </h4>
                       <p>
-                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        pengalaman yang sangat manarik, dimana kita bisa berlatih berbicara dengan sangat santai dan dapat dipraktekkan langsung materinya,
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>Thank God I found a place to learn public
+                        speaking that can be combined with work, taking care of children and family. The mentor is
+                        really cool and humble. Learning is not just about theory, but is really a place for direct
+                        practice. Apart from the price being affordable compared to offline, the class management is
+                        also really good.
                         <span class="dots">...</span><span class="readMore"> Read
                           More
                           &raquo;</span>
-                        <span class="moreText"> dan terimakasih untuk mentoring yang menyenangkan bersama kak, Panji Arya</span><span
-                          class="readLess"> &laquo; Read Less</span>
+                        <span class="moreText"> Get e-modules and class recordings too. So we can see our progress over
+                          time from our own perspective. At first I was a bit scared, too much overthinking, but I
+                          learned a lot from my mentor. Not only about public speaking, but life values ​​too. BTW,
+                          success is always dialogue. Thank you for providing a forum for learning public speaking.
+                          Never stop learning. Advanced class updates.
+                          I'm really happy to have made the decision to continue my classes with Dialogic. Plus you get
+                          a coach who mentors you in great detail and personally. But it's just sad because it's over
+                          (so quickly). But that's okay because you can still continue the class next time. BTW, I have
+                          felt a lot of changes. Because as my mentor (Sis Caca) said, public speaking is not just the
+                          art of speaking, but the art of acting and placing yourself. Wow, what a lot of knowledge to
+                          share with the mentor. Thank you dialogika for presenting a program with quality
+                          coaches.</span><span class="readLess"> &laquo; Read Less</span>
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
@@ -641,9 +655,9 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjWyJwb6JKgtVDs7ikRZJQT1r3JUZHDoOb4IYuKmKA7YwkUh-IA=w99-h99-p-rp-mo-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjXbvphrft3QRHIMwVmLYAv26eE5VBEFAmIwm4gvQv8JBOOFfsNg=w75-h75-p-rp-mo-br100"
                         class="testimonial-img" alt="testimoni-1" />
-                      <h3>Ardhya Devanty</h3>
+                      <h3>Pujiyanti Widhiastuti</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -653,15 +667,11 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Kelas Public Speaking yg seru. Saya mengikuti kelas
-                        privatenya dengan mentor kak Fanny sangat baik dan
-                        ramah, membantu selama kelas. Saya banyak belajar
-                        bagaimana cara bagaimana lebih percaya diri saat harus
+                        The classes are fun, you really increase your knowledge, the mentors are very patient and really
+                        care about their students. It's recommended.
 
                         <span class="dots">...</span><span class="readMore"> Read More &raquo;</span>
-                        <span class="moreText">
-                          berbicara di dpn banyak orang. Terimakasih
-                          Dialogika.</span><span class="readLess"> &laquo; Read Less</span><i
+                        <span class="moreText"></span><span class="readLess"> &laquo; Read Less</span><i
                           class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
@@ -766,9 +776,9 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjUQ-Vq8rm5wwY5efzwiKmKbxyy-q6hh36u-mmH9mjtez315cJ7H=w45-h45-p-rp-mo-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjVD2VgPiURYx6XPfy5hkWci8cg5yDXT9vKxoQk4obQEGPiOxTByRA=w75-h75-p-rp-mo-br100"
                         class="testimonial-img" alt="testimoni-1" />
-                      <h3>Astrid Savitri</h3>
+                      <h3>Indra Hadi</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -778,8 +788,14 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Learning public speaking at Dialogika is very enjoyable, both in the learning atmosphere and the
-                        mentors. Here, you not only gain knowledge but also the confidence to speak well in public.
+                        Dialogic provides training programs that are interesting, easy to digest and apply. The trainers
+                        are very experienced and can be discussed with and also always provide feedback so that we can
+                        continue
+                        <span class="dots">...</span><span class="readMore"> Read
+                          More
+                          &raquo;</span>
+                        <span class="moreText"> to improve. Certainly the material is very useful for me. Thank you
+                          Dialogic!</span><span class="readLess"> &laquo; Read Less</span>
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
